--- a/U7-lite.html
+++ b/U7-lite.html
@@ -29,6 +29,7 @@
     <!-- Nuevo Header Mejorado para PC -->
     <div class="new-header">
         <div class="header-container">
+            <!-- PC Version -->
             <div class="desktop-header">
                 <!-- Logo izquierdo -->
                 <div class="logo-section left-logo">
@@ -36,11 +37,6 @@
                          alt="DS3 Comunicaciones" 
                          class="main-logo">
                 </div>
-                <div class="ubiquiti-logo-center">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/Ubiquiti_Logo.png" 
-                             alt="Ubiquiti" 
-                             class="ubiquiti-logo">
-                    </div>
                 <!-- BUSCADOR EN EL CENTRO -->
                 <div class="search-center-container">
                     <form name="form1" method="get" action="https://www.ds3comunicaciones.com/find.html" 
@@ -58,6 +54,11 @@
 
                 <!-- Información de Contacto a la derecha -->
                 <div class="contact-info-right">
+                    <div class="ubiquiti-logo-center">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/Ubiquiti_Logo.png" 
+                             alt="Ubiquiti" 
+                             class="ubiquiti-logo">
+                    </div>
                     <!-- Teléfonos y email -->
                     <div class="contact-main-info">
                         <div class="contact-numbers">
@@ -893,7 +894,7 @@
                     </div>
                     <div class="flex items-center justify-center w-[350px] h-[300px] border rounded-md overflow-hidden hover:border-blue-500 transition duration-200">
                         <img onclick="openGalleryImageModal(this.src, 'Caja U7-LITE abierta')"
-                            src="img/box-u7-lite.webp" alt="Caja U7-LITE abierta"
+                            src="img/box-u7-lite.png" alt="Caja U7-LITE abierta"
                             class="cursor-pointer w-[300px] h-auto block object-contain p-3 hover:scale-105 transition duration-200" />
                     </div>
                 </div>
@@ -911,7 +912,7 @@
         </div>
         <div class="h-auto mt-20 pt-10 list-right">
             <div class="p-5 border rounded-md bg-white text-sm w-[190px]">
-                <p class=" brands-header brands-title" style="font-size: 15px; padding-bottom: 5px">
+                <p class="brands-header brands-title" style="font-size: 15px; padding-bottom: 5px">
                     Lista de precios
                 </p>
                 <ul class="text-sm" style="font-size: 13px">
@@ -1032,7 +1033,7 @@
         <div class="mt-5 flex flex-wrap justify-center pb-10">
             <div class="flex gap-5 container-T flex-wrap justify-center flex-wrap h-full">
 
-                <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/U6-LITE.html"
+                <a href=""
                     class="cursor-pointer border-l border-t border-r shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3"> <img
                             src="https://www.ds3comunicaciones.com/ubiquiti/images//U7-LITE_front_face.png" alt=""
@@ -1050,7 +1051,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/U6-LR.html"
+                <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="img/u7-lr-lado.png" alt=""
@@ -1070,7 +1071,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/U6-PRO.html"
+                <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="img/u7-pro-front-face.png" alt=""
@@ -1090,7 +1091,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/U6-MESH.html"
+                <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="img/u7-pro-wall-front-face.png" alt=""
@@ -1110,7 +1111,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/U6-LITE.html"
+                <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="img/u7-pro-xg-front-face.png" alt=""
@@ -1130,7 +1131,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/U6-IW.html"
+                <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="img/u7-pro-xgs-lado.png" alt=""
@@ -1150,7 +1151,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/U6-Extender-US.html"
+                <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="img/u7-outdoor-front-face.png" alt=""
@@ -1170,7 +1171,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/UAP-AC-LITE.html"
+                <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="img/u7-pro-outdoor-us-lado.png" alt=""
@@ -1190,7 +1191,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/UAP-AC-LR.html"
+                <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="img/u7-pro-max-front-face.png" alt=""
@@ -1210,7 +1211,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="https://www.ds3comunicaciones.com/ubiquiti/unifi/UAP-AC-M.html"
+                <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
                         <img src="img/u6-plus-lado.png" alt=""
@@ -1233,6 +1234,7 @@
             </div>
         </div>
     </section>
+
     <!-- ============================================
          SECCIÓN DE PREGUNTAS FRECUENTES (FAQ)
          ============================================ -->
@@ -1328,6 +1330,7 @@
                         </p>
                     </div>
                 </div>
+                
                 <!-- Formulario para nuevas preguntas -->
                 <div class="new-question mt-8 p-6 border border-blue-200 rounded-lg bg-blue-50">
                     <h3 class="text-xl font-bold mb-4 text-blue-700">
@@ -1412,6 +1415,8 @@
             </div>
         </div>
     </section>
+
+
     <footer class="px-5 py-7 text-sm w-full" style="background-color: #e9e9e9; font-family: 'Noto Sans', sans-serif">
     <div class="ff max-w-90 mx-auto px-5 cc-footer flex justify-between flex-wrap gap-2">
       <div class="mb-5 flex flex-col">
