--- a/U7-lite.html
+++ b/U7-lite.html
@@ -390,7 +390,6 @@
                                 alt="Logo Alfa" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Alfa</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -407,7 +406,6 @@
                                 alt="Logo Airlive" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Airlive</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -424,7 +422,6 @@
                                 alt="Logo Andrew" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Andrew</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -441,7 +438,6 @@
                                 alt="Logo AMP" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">AMP</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -458,7 +454,6 @@
                                 alt="Logo Amphenol" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Amphenol</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -475,7 +470,6 @@
                                 alt="Logo Belden" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Belden</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -492,7 +486,6 @@
                                 alt="Logo Cisco" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Cisco</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -509,7 +502,6 @@
                                 alt="Logo Dahua" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Dahua</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -526,7 +518,6 @@
                                 alt="Logo D-Link" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">D-Link</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -543,7 +534,6 @@
                                 alt="Logo Dixon" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Dixon</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -560,7 +550,6 @@
                                 alt="Logo FibreFab" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">FibreFab</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -577,7 +566,6 @@
                                 alt="Logo LanPro" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">LanPro</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -594,7 +582,6 @@
                                 alt="Logo L-Com" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">L-Com</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -611,7 +598,6 @@
                                 alt="Logo Mikrotik" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Mikrotik</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -628,7 +614,6 @@
                                 alt="Logo Panduit" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Panduit</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -645,7 +630,6 @@
                                 alt="Logo Satra" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Satra</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -662,7 +646,6 @@
                                 alt="Logo Siemon" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Siemon</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -679,7 +662,6 @@
                                 alt="Logo TP-Link" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">TP-Link</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -696,7 +678,6 @@
                                 alt="Logo Trendnet" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Trendnet</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -713,7 +694,6 @@
                                 alt="Logo Ubiquiti" 
                                 class="brand-logo">
                         </div>
-                        <div class="brand-name">Ubiquiti</div>
                         <div class="brand-hover">
                             <span class="brand-hover-text">Ver productos</span>
                             <i class="fas fa-external-link-alt"></i>
@@ -874,7 +854,7 @@
                     </div>
                     <div class="flex items-center justify-center w-[350px] h-[300px] border rounded-md overflow-hidden hover:border-blue-500 transition duration-200">
                         <img onclick="openGalleryImageModal(this.src, 'U7-LITE ángulo')"
-                            src="img/u7-lite-01.png" alt="U7-LITE ángulo"
+                            src="img/u7-lite_side.png" alt="U7-LITE ángulo"
                             class="cursor-pointer w-[300px] h-auto block object-contain p-3 hover:scale-105 transition duration-200" />
                     </div>
                     <div class="flex items-center justify-center w-[350px] h-[300px] border rounded-md overflow-hidden hover:border-blue-500 transition duration-200">
@@ -884,7 +864,7 @@
                     </div>
                     <div class="flex items-center justify-center w-[350px] h-[300px] border rounded-md overflow-hidden hover:border-blue-500 transition duration-200">
                         <img onclick="openGalleryImageModal(this.src, 'Caja U7-LITE')"
-                            src="img/box.png" alt="Caja U7-LITE"
+                            src="img/u7-lite_box2.png" alt="Caja U7-LITE"
                             class="cursor-pointer w-[300px] h-auto block object-contain p-3 hover:scale-105 transition duration-200" />
                     </div>
                     <div class="flex items-center justify-center w-[350px] h-[300px] border rounded-md overflow-hidden hover:border-blue-500 transition duration-200">
@@ -894,7 +874,7 @@
                     </div>
                     <div class="flex items-center justify-center w-[350px] h-[300px] border rounded-md overflow-hidden hover:border-blue-500 transition duration-200">
                         <img onclick="openGalleryImageModal(this.src, 'Caja U7-LITE abierta')"
-                            src="img/box-u7-lite.png" alt="Caja U7-LITE abierta"
+                            src="img/u7-lite_box.png" alt="Caja U7-LITE abierta"
                             class="cursor-pointer w-[300px] h-auto block object-contain p-3 hover:scale-105 transition duration-200" />
                     </div>
                 </div>
@@ -1054,7 +1034,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="img/u7-lr-lado.png" alt=""
+                        <img src="img/u7-lr_side.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -1074,7 +1054,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="img/u7-pro-front-face.png" alt=""
+                        <img src="img/u7-pro_front.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -1094,7 +1074,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="img/u7-pro-wall-front-face.png" alt=""
+                        <img src="img/u7-pro-wall_front.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -1114,7 +1094,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="img/u7-pro-xg-front-face.png" alt=""
+                        <img src="img/u7-pro-xg_front.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -1134,7 +1114,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="img/u7-pro-xgs-lado.png" alt=""
+                        <img src="img/u7-pro-xgs_side.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -1154,7 +1134,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="img/u7-outdoor-front-face.png" alt=""
+                        <img src="img/u7-outdoor_front.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -1174,7 +1154,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="img/u7-pro-outdoor-us-lado.png" alt=""
+                        <img src="img/u7-pro-outdoor_side.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -1194,7 +1174,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="img/u7-pro-max-front-face.png" alt=""
+                        <img src="img/u7-pro-max_front.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
@@ -1214,7 +1194,7 @@
                 <a href=""
                     class="cursor-pointer border shadow-md w-[210px] h-full p-5 flex flex-col gap-3 rounded-md hover:border-blue-500 card no-underline">
                     <div class="w-[170px] h-[150px] flex items-center justify-center mb-3">
-                        <img src="img/u6-plus-lado.png" alt=""
+                        <img src="img/u6-plus_side.png" alt=""
                             class="object-cover w-[170px]" />
                     </div>
                     <div class="w-full flex justify-between border-t pt-4">
