--- a/U7-lite.html
+++ b/U7-lite.html
@@ -23,6 +23,8 @@
     <script async defer crossorigin="anonymous" 
         src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v18.0">
     </script>
+    <meta property="fb:admins" content="" />
+    <meta property="fb:app_id" content="" />
 </head>
 
 <body>
@@ -704,7 +706,7 @@
         </div>
         <div class="center">
             <iframe src="components/SubMenu.html" frameborder="0" class="w-full mt-3" style="height: 100px;"></iframe>
-            <div class="cascada pt-5 text-base text-center flex items-center justify-star text-slate-600 gap-2">
+            <div class="cascada text-base text-center flex items-center justify-star text-slate-600 gap-2" style=".pt-5 {padding-top: 2px;}">
                 <a href="https://www.ds3comunicaciones.com/index.html">
                     <i class="fa-solid fa-house"></i>
                 </a>
@@ -1343,14 +1345,6 @@
                             >
                                 <i class="fab fa-whatsapp"></i>
                                 Enviar pregunta por WhatsApp
-                            </button>
-                            <button 
-                                type="button" 
-                                onclick="window.open('https://wa.me/937700700?text=Hola, tengo una consulta sobre el U7-LITE', '_blank')"
-                                class="bg-blue-600 hover:bg-blue-700 text-white font-medium py-3 px-6 rounded-md transition duration-200 flex items-center justify-center gap-2"
-                            >
-                                <i class="fas fa-comments"></i>
-                                Consulta general
                             </button>
                         </div>
                         <p class="text-xs text-gray-500 text-center">
