--- a/U7-lite-b.html
+++ b/U7-lite-b.html
@@ -36,7 +36,7 @@
                 <div class="ds3-header-inner">
                     
                     <div class="ds3-logos-container">
-                        <a href="/" class="logo-link">
+                        <a href="" class="logo-link">
                             <img src="https://www.ds3comunicaciones.com/mikrotik/images/Logo1.jpg" 
                                 alt="DS3 Comunicaciones" 
                                 class="logo-ds3">
